# MOTION

./: .gitignore  CMakeLists.txt  README.md
Eval/: benchmark.sh  crosstab.sh  get_send_receive_2pc.py  innderproduct.sh  setup.sh
Log/: log-benchmark_integers-2pc.xlsx  log-crosstabs-shared0-party0  log-crosstabs-shared0-party1  log-crosstabs-shared0.xlsx  log-crosstabs-shared1-party0  log-crosstabs-shared1-party1  log-crosstabs-shared1.xlsx  log-primitive-2pc.xlsx
src/examples/: CMakeLists.txt
src/examples/crosstabs_shared/: CMakeLists.txt  crosstabs_shared_main.cpp
src/examples/crosstabs_shared/common/: crosstabs_shared.cpp
src/examples/tutorial/: geninput.py
